[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "Utsuho"
authors = [
    { name = "Nobuyuki Sekimori", email = "43375309+juno-rmks@users.noreply.github.com" },
]
description = "Utsuho is a Python module that provides interconversion between Japanese half-width katakana and full-width katakana."
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
readme = "README.md"
requires-python = ">=3.7"
dependencies = []
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/juno-rmks/utsuho/"
"Documentation" = "https://utsuho.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest>=7.0.0", "coverage>=7.2.2", "pytest-benchmark>=4.0.0"]
dev = ["build>=0.10.0", "twine>=4.0.2", "autopep8>=2.0.2", "isort>=5.11.5"]
docs = [
    "Sphinx==5.3.0",
    "sphinx-intl==2.1.0",
    "sphinx-rtd-theme==1.2.0",
    "myst-parser==1.0.0",
]

[tool.setuptools.dynamic]
version = { attr = "utsuho.__version__" }

[tool.autopep8]
max_line_length = 159

[tool.isort]
multi_line_output = 3
line_length = 159
use_parentheses = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--benchmark-skip"]
filterwarnings = ["error"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
