[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
name = "Utsuho"
authors = [
    { name = "Nobuyuki Sekimori", email = "43375309+juno-rmks@users.noreply.github.com" },
]
description = "Utsuho is a Python module that facilitates bidirectional conversion between half-width katakana and full-width katakana in Japanese, as well as between hiragana and katakana."
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = ["click>=8.1.7"]
dynamic = ["version"]

[project.urls]
"Source Code" = "https://github.com/juno-rmks/utsuho/"
"Issue Tracker" = "https://github.com/juno-rmks/utsuho/issues/"
"Documentation" = "https://utsuho.readthedocs.io/"

[project.optional-dependencies]
test = ["pytest", "coverage", "pytest-benchmark"]
dev = ["build", "twine", "autopep8", "isort"]
docs = [
    "Sphinx==5.3.0",
    "sphinx-intl==2.1.0",
    "sphinx-rtd-theme==1.2.0",
    "myst-parser==1.0.0",
]

[project.scripts]
utsuho = "utsuho.cli:cli"

[tool.setuptools.dynamic]
version = { attr = "utsuho.__version__" }

[tool.autopep8]
max_line_length = 159

[tool.isort]
multi_line_output = 3
line_length = 159
use_parentheses = true

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--benchmark-skip"]
filterwarnings = ["error"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
