[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
name = "Utsuho"
requires-python = ">=3.10"
dependencies = ["click>=8.1.7"]
authors = [
    { name = "Nobuyuki Sekimori", email = "43375309+juno-rmks@users.noreply.github.com" },
]
description = "Utsuho is a Python module that facilitates bidirectional conversion between half-width katakana and full-width katakana in Japanese."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE"]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "build",
    "twine",
    "pylint",
    "black",
    "isort",
    "pytest",
    "coverage",
    "pytest-benchmark",
    "Sphinx==5.3.0",
    "sphinx-intl==2.1.0",
    "sphinx-rtd-theme==1.2.0",
    "myst-parser==1.0.0",
]

[project.urls]
"Source Code" = "https://github.com/juno-rmks/utsuho/"
"Issue Tracker" = "https://github.com/juno-rmks/utsuho/issues/"
"Documentation" = "https://utsuho.readthedocs.io/"

[project.scripts]
utsuho = "utsuho.cli:cli"

[tool.setuptools.dynamic]
version = { attr = "utsuho.__version__" }

[tool.pylint.format]
max-line-length = "88"

[tool.black]
skip-string-normalization = true

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib", "--benchmark-skip"]
filterwarnings = ["error"]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
exclude_lines = ["if __name__ == .__main__.:"]
